--- a/templates/index.html
+++ b/templates/index.html
@@ -109,7 +109,7 @@
 
 <section id="team">
   <h3>團隊成員</h3>
-  <p>由允奇、Kevin、小白與Meow組成的開發團隊...</p>
+  <p>由周允奇、李彥槿、劉哲諺、邱彥程、邱柏耀</p>
 </section>
 
 <footer class="site-footer">
