--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,9 @@
       <li><a href="#motive">創作動機</a></li>
       <li><a href="#team">團隊成員</a></li>
     </ul>
+    <a href="https://github.com/BrianThePropeller1037/DrinkSelector" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" class="github-logo">
+    </a>
   </nav>
 </header>
   <div class="container my-5">
