--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
       <li><a href="#team">團隊成員</a></li>
     </ul>
     <a href="https://github.com/BrianThePropeller1037/DrinkSelector" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" class="github-logo">
+      <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" class="github-logo" width="21" height="21">
     </a>
   </nav>
 </header>
