--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: #fefae0; /* 原本背景色可以保留當備用 */
-  background-image: url("drinksbg.jpg");
+  background-image: url("static/drinksbg.jpg");
   background-size: cover;            /* 讓圖片鋪滿整個畫面 */
   background-repeat: no-repeat;      /* 不要重複平鋪 */
   background-attachment: fixed;      /* 捲動時背景不會移動 */
