--- a/templates/index.html
+++ b/templates/index.html
@@ -35,17 +35,19 @@
 </head>
 <body>
   <header class="main-header">
-  <nav class="navbar">
-    <div class="navbar-title">🍹 飲料推薦系統</div>
-    <ul class="navbar-menu">
-      <li><a href="#motive">創作動機</a></li>
-      <li><a href="#team">團隊成員</a></li>
-    </ul>
-    <a href="https://github.com/BrianThePropeller1037/DrinkSelector" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" class="github-logo" width="21" height="21">
-    </a>
-  </nav>
-</header>
+    <nav class="navbar">
+      <div class="navbar-title">🍹 飲料推薦系統</div>
+	  
+      <div class="navbar-right">
+        <ul class="navbar-menu">
+          <li><a href="#motive">創作動機</a></li>
+          <li><a href="#team">團隊成員</a></li>
+        </ul>
+	    <a href="https://github.com/BrianThePropeller1037/DrinkSelector" target="_blank">
+          <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" class="github-logo" width="21" height="21">
+        </a>
+    </nav>
+  </header>
   <div class="container my-5">
     <div class="drink-card mx-auto" style="max-width: 600px">
       <h2 class="text-center mb-2 heading-orange">🍹 今天喝什麼❓</h2>
