--- a/templates/index.html
+++ b/templates/index.html
@@ -43,24 +43,24 @@
           <li><a href="#motive">創作動機</a></li>
           <li><a href="#team">團隊成員</a></li>
         </ul>
-        <!-- GitHub -->
-        <a href="https://github.com/BrianThePropeller1037/DrinkSelector" target=_blank">
-          <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" class="social-icon" width="28" height="28>
+		<!-- GitHub -->
+        <a href="https://github.com/BrianThePropeller1037/DrinkSelector" target=_"blank">
+          <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" class="social-icon" width="24" height="24>
         </a>
 
         <!-- IG -->
         <a href="https://www.instagram.com/nptu.weirdos_0524/" target="_blank">
-          <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" class="social-icon" width="28" height="28>
+          <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" class="social-icon" width="24" height="24>
         </a>
 
         <!-- YouTube -->
         <a href="https://www.youtube.com/@NptuWeirdos0525" target="_blank">
-          <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube" class="social-icon" width="28" height="28>
+          <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube" class="social-icon" width="24" height="24>
         </a>
 
         <!-- FB -->
         <a href="https://www.facebook.com/profile.php?id=61576691521276" target="_blank">
-          <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" class="social-icon" width="28" height="28>
+          <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" class="social-icon" width="24" height="24>
         </a>
     </nav>
   </header>
