--- a/static/style.css
+++ b/static/style.css
@@ -27,6 +27,22 @@ body {
   padding: 30px;
 }
 
+.btn-drink {
+  background-color: #bc6c25;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  width: 100%;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
+.btn-drink:hover {
+  background-color: #a65f23;
+}
+
 
 h1 {
   text-align: center;
