--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
             <option>其他</option>
           </select>
         </div>
-        <button class="btn btn-drink w-100" type="submit">☕️ 幫我想想！</button>
+        <button class="btn btn-drink w-100" type="submit">☕️ 幫我想想❗</button>
       </form>
       <div id="result"></div>
     </div>
