--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,7 @@
         <ul class="navbar-menu">
           <li><a href="#motive">創作動機</a></li>
           <li><a href="#team">團隊成員</a></li>
+          <li><a href="#about">關於我們</a></li
         </ul>
         <a href="https://github.com/BrianThePropeller1037/DrinkSelector" target="_blank">
           <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" class="social-icon">
@@ -82,6 +83,27 @@
     </div>
   </div>
 
+  <section class="popular-drinks container white-text mt-5">
+  <h3>🔥 人氣推薦 TOP 3</h3>
+  <ul>
+    <li>迷客夏 - 大正珍珠紅茶拿鐵</li>
+    <li>麻古茶坊 - 楊枝甘露2.0</li>
+    <li>得正 - 芝士奶蓋焙烏龍</li>
+  </ul>
+  </section>
+
+  <section class="drink-fact container mt-4">
+    <h4>🍵 冷知識時間</h4>
+    <p>你知道嗎？珍珠其實有分黑糖煮、蜂蜜煮、甚至綠茶煮喔！</p>
+  </section>
+
+  <section class="about-team container mt-4 white-text">
+    <h3>👨‍💻 關於我們</h3>
+    <p>我們是來自屏東大學的學生團隊，希望用簡單的工具幫助大家解決選擇障礙。<br>
+     這個系統是我們共同完成的期末專案，感謝每位使用者的支持與建議 🙏</p>
+  </section>
+
+  
   <section id="motive" class="white-text container mt-5">
     <h3>創作動機</h3>
     <p>大家都知道屏東是一個酷暑難耐的地方，在屏東，我相信大家都一定想趕快想到要喝甚麼飲料，而不是頂著37°C的體感溫度苦苦地想。<br>我們希望解決有選擇困難症的朋友在挑飲料時的煩惱，因此設計了這個系統。</p>
