--- a/static/style.css
+++ b/static/style.css
@@ -169,4 +169,12 @@ button:hover {
   background-color: #a65f23;
 }
 
+.drink-fact {
+  background-color: rgba(0,0,0,0.4);
+  color: white;
+  padding: 20px;
+  border-radius: 12px;
+  max-width: 700px;
+  margin: 40px auto;
+}
 
