--- a/templates/index.html
+++ b/templates/index.html
@@ -92,9 +92,9 @@
   </ul>
   </section>
 
-  <section class="drink-fact">
-    <h4>🍵 冷知識時間</h4>
-    <p>你知道嗎？珍珠其實有分黑糖煮、蜂蜜煮、甚至綠茶煮喔！</p>
+  <section class="drink-fact container mt-5 white-text">
+  <h4>🍵 冷知識時間</h4>
+  <p>你知道嗎？珍珠其實有分黑糖煮、蜂蜜煮、甚至綠茶煮喔！</p>
   </section>
 
   <section class="about-team container mt-4 white-text">
