--- a/templates/index.html
+++ b/templates/index.html
@@ -105,12 +105,12 @@
 
   
   <section id="motive" class="white-text container mt-5">
-    <h3>創作動機</h3>
+    <h3>💡創作動機</h3>
     <p>大家都知道屏東是一個酷暑難耐的地方，在屏東，我相信大家都一定想趕快想到要喝甚麼飲料，而不是頂著37°C的體感溫度苦苦地想。<br>我們希望解決有選擇困難症的朋友在挑飲料時的煩惱，因此設計了這個系統。</p>
   </section>
 
   <section id="team" class="white-text container mt-4">
-    <h3>團隊成員</h3>
+    <h3>👫團隊成員</h3>
     <p>應英二甲：周允奇、李彥槿、劉哲諺、邱彥程<br>及應日二甲：邱柏耀組成的開發團隊。</p>
   </section>
 
