--- a/templates/index.html
+++ b/templates/index.html
@@ -116,7 +116,7 @@
 
   <footer class="site-footer">
     <p>© 2025 飲料推薦系統｜團隊成員：周允奇、李彥槿、劉哲諺、邱彥程、邱柏耀。</p>
-    <p>如有建議請來信：NptuWeirdos0525@gmail.com/p>
+    <p>如有建議請來信：NptuWeirdos0525@gmail.com</p>
   </footer>
 
   <script>
