--- a/static/style.css
+++ b/static/style.css
@@ -125,14 +125,11 @@ button:hover {
   word-wrap: break-word;
 }
 
-
 .white-text {
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
   color: white;
-  background-color: rgba(0, 0, 0, 0.4);
-  padding: 20px;
-  border-radius: 12px;
-  margin: 20px auto;
-  max-width: 900px;
 }
 
 
