--- a/static/style.css
+++ b/static/style.css
@@ -170,10 +170,11 @@ button:hover {
 
 .drink-fact {
   margin: 40px auto;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.8);
   color: white;
   padding: 20px 30px;
   border-radius: 12px;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  max-width: 900px
 }
 
